corrigida posicionamento de botoes quantidade

--- a/src/app/produto/produto.page.html
+++ b/src/app/produto/produto.page.html
@@ -28,15 +28,15 @@
     </ion-col>
     <ion-col size="6">
       <ion-row class="ion-align-items-center">
-        <ion-col size="4">
+        <ion-col size="4" class="ion-text-center">
           <ion-button (click)="add()">
             <ion-icon name="add"></ion-icon>
           </ion-button>
         </ion-col>
-        <ion-col size="4">
+        <ion-col size="4" class="ion-text-center">
           <ion-input class="inp-quantidade" type="number" [(ngModel)]="quantidade"></ion-input>
         </ion-col>
-        <ion-col size="4">
+        <ion-col size="4" class="ion-text-center">
           <ion-button (click)="remove()">
             <ion-icon name="remove"></ion-icon>
           </ion-button>
