--- a/src/app/produto/produto.page.scss
+++ b/src/app/produto/produto.page.scss
@@ -23,8 +23,6 @@
     text-align: center;
     background-color: var(--white-smoke);
     border-radius: 8px;
-}
-
-.inp-quantidade {
-    padding-left: 0!important;
+    max-width: 100%;
+    width: 100%;
 }
